<resources>
	<string name="app_name">Assempix</string>
	<string name="action_share">Share</string>
	<string name="sample_rate">Sample Rate</string>
	<string name="rate_8000">8000 Hz</string>
	<string name="rate_16000">16000 Hz</string>
	<string name="rate_32000">32000 Hz</string>
	<string name="rate_44100">44100 Hz</string>
	<string name="rate_48000">48000 Hz</string>
	<string name="channel_select">Channel Select</string>
	<string name="channel_default">Default</string>
	<string name="channel_first">First</string>
	<string name="channel_second">Second</string>
	<string name="channel_summation">Summation</string>
	<string name="channel_analytic">Analytic</string>
	<string name="audio_source">Audio Source</string>
	<string name="source_default">Default</string>
	<string name="source_microphone">Microphone</string>
	<string name="source_camcorder">Camcorder</string>
	<string name="source_voice_recognition">Voice Recognition</string>
	<string name="source_unprocessed">Unprocessed</string>
	<string name="night_mode">Night Mode</string>
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="force_quit">Force Quit</string>
	<string name="quit">Quit</string>
	<string name="close">Close</string>
	<string name="okay">Okay</string>
	<string name="audio_init_failed">Audio initialization failed.\nTry other settings.\nForce Quit and restart might also help.</string>
	<string name="audio_setup_failed">Audio setup failed.\nTry other settings.</string>
	<string name="audio_permission_denied">Microphone access denied.\nCheck permissions.</string>
	<string name="audio_recording_paused">Recording paused</string>
	<string name="audio_recording_error">Recording audio failed.\nCheck if access is blocked.\nRestart device if necessary to gain back access.</string>
	<string name="audio_recording_config">Sample Rate: %1$d Hz\nChannel Select: %2$s\nAudio Source: %3$s</string>
	<string name="image_description">Decoded image</string>
	<string name="spectrum_description">Spectrum of audio signal</string>
	<string name="spectrogram_description">Spectrogram of audio signal</string>
	<string name="constellation_description">Demodulated constellation points</string>
	<string name="peak_meter_description">Peak audio signal level</string>
	<string name="status_message">Carrier: %1$.2f Hz\nMode: %2$s\nCall: %3$s\n\n%4$s</string>
	<string name="preamble_sync">Synchronized and receiving</string>
	<string name="preamble_fail">Preamble failure</string>
	<string name="preamble_nope">Ignoring preamble</string>
	<string name="received_ping">Received Ping</string>
	<string name="mode_unsupported">%1$d (unsupported)</string>
	<string-array name="operation_modes">
		<item>0 (simple ping)</item>
		<item>1 (unsupported)</item>
		<item>2 (unsupported)</item>
		<item>3 (unsupported)</item>
		<item>4 (unsupported)</item>
		<item>5 (unsupported)</item>
		<item>6 (8PSK, 2700 Hz, 10 s)</item>
		<item>7 (8PSK, 2500 Hz, 11 s)</item>
		<item>8 (QPSK, 2500 Hz, 16 s)</item>
		<item>9 (QPSK, 2250 Hz, 18 s)</item>
		<item>10 (8PSK, 3200 Hz, 9 s)</item>
		<item>11 (8PSK, 2400 Hz, 11 s)</item>
		<item>12 (QPSK, 2400 Hz, 16 s)</item>
		<item>13 (QPSK, 1600 Hz, 24 s)</item>
	</string-array>
	<string name="heap_error">Not enough memory</string>
	<string name="decoding_failed">Decoding failed</string>
	<string name="payload_unknown">Payload unknown</string>
	<string name="chunk_unsupported">Unsupported chunk format</string>
	<string name="chunk_duplicate">Duplicate chunk received</string>
	<string name="chunk_redundant">Redundant chunk received</string>
	<string name="chunk_corrupted">Corrupted chunk image</string>
	<string name="chunk_received">Chunk %1$d of %2$d received</string>
	<string name="image_received">Image received with %1$d bit flips</string>
	<string name="creating_picture_directory_failed">Creating picture directory failed.\nCheck permissions.</string>
	<string name="creating_picture_file_failed">Creating picture file failed.\nCheck permissions.</string>
	<string name="storing_picture_failed">Storing picture failed</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="privacy_policy_text">To be able to decode COFDMTV encoded images, Assempix needs access to the microphone.
Having access to the microphone is considered to be a sensitive permission and you have the right to know what Assempix does with that access:
The data recorded from the microphone is only used to feed the COFDMTV decoder, VU meter and the spectrum analyzer for visualization of its frequency content.
Assempix uses a very small temporary buffer in volatile memory and constantly overwrites that buffer with new data from the microphone.
The resulting images from the COFDMTV decoder is the only data that gets stored in persistent storage on your device.</string>
	<string name="about">About Assempix</string>
	<string name="about_text">Assempix %1$s\nCopyright 2021 aicodix GmbH
\n\nPlease read the disclaimer at the bottom of this page.
\n\nAssempix decodes COFDMTV encoded audio signals to images and is based on open-source software:
\n\nOFDM modem decoder and specification:\nhttps://github.com/aicodix/modem\nBSD Zero Clause License
\n\nPolar list and ordered statistics decoding:\nhttps://github.com/aicodix/code\nBSD Zero Clause License
\n\nDigital signal processing:\nhttps://github.com/aicodix/dsp\nBSD Zero Clause License
\n\nLauncher icon:\nhttps://github.com/google/material-design-icons\nApache License 2.0
\n\nDISCLAIMER:\nTHE SOFTWARE IS PROVIDED \"AS IS\" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.</string>
</resources>
