<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.aicodix.assempix.MainActivity">
	<item
		android:id="@+id/menu_item_share"
		android:title="@string/action_share"
		app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
		app:showAsAction="always" />
	<item android:title="@string/sample_rate">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/action_set_rate_8000"
					android:title="@string/rate_8000" />
				<item
					android:id="@+id/action_set_rate_44100"
					android:title="@string/rate_44100" />
				<item
					android:id="@+id/action_set_rate_48000"
					android:title="@string/rate_48000" />
			</group>
		</menu>
	</item>
	<item android:title="@string/channel_select">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/action_set_channel_default"
					android:title="@string/channel_default" />
				<item
					android:id="@+id/action_set_channel_first"
					android:title="@string/channel_first" />
				<item
					android:id="@+id/action_set_channel_second"
					android:title="@string/channel_second" />
			</group>
		</menu>
	</item>
	<item android:title="@string/audio_source">
		<menu>
			<group android:checkableBehavior="single">
				<item
					android:id="@+id/action_set_source_default"
					android:title="@string/source_default" />
				<item
					android:id="@+id/action_set_source_microphone"
					android:title="@string/source_microphone" />
				<item
					android:id="@+id/action_set_source_camcorder"
					android:title="@string/source_camcorder" />
				<item
					android:id="@+id/action_set_source_voice_recognition"
					android:title="@string/source_voice_recognition" />
				<item
					android:id="@+id/action_set_source_unprocessed"
					android:title="@string/source_unprocessed" />
			</group>
		</menu>
	</item>
	<item android:title="@string/night_mode">
		<menu>
			<item
				android:id="@+id/action_enable_night_mode"
				android:title="@string/enable" />
			<item
				android:id="@+id/action_disable_night_mode"
				android:title="@string/disable" />
		</menu>
	</item>
	<item android:title="@string/force_quit">
		<menu>
			<item
				android:id="@+id/action_force_quit"
				android:title="@string/quit" />
		</menu>
	</item>
	<item
		android:id="@+id/action_privacy_policy"
		android:title="@string/privacy_policy" />
	<item
		android:id="@+id/action_about"
		android:title="@string/about" />
</menu>
